# dds-service

./: .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
apps/references/: forms.py  urls.py
apps/references/data/: seed_data.py
apps/references/management/commands/: createsuperuser_if_none_exists.py  seed_references.py
apps/references/migrations/: 0001_initial.py
apps/references/models/: __init__.py  category.py  mixins.py  operation_type.py  status.py  subcategory.py
apps/references/views/: __init__.py  category.py  index.py  operation_type.py  status.py  subcategory.py
apps/transactions/: filters.py  forms.py  urls.py
apps/transactions/management/commands/: seed_cashflow_records.py
apps/transactions/migrations/: 0001_initial.py
apps/transactions/models/: __init__.py  cashflow_record.py
apps/transactions/static/transactions/: form_dependencies.js
apps/transactions/views/: __init__.py  create.py  delete.py  dependencies.py  list.py  update.py
config/: urls.py  views.py
config/settings/: __init__.py  base.py
config/settings/components/: auth_password_validators.py  database.py  installed_apps.py  localization.py  logging.py  middleware.py  security.py  static_files.py  templates.py
locale/ru/LC_MESSAGES/: django.mo  django.po
templates/: base.html  home.html
templates/references/: category_list.html  confirm_delete.html  form.html  index.html  operation_type_list.html  status_list.html  subcategory_list.html
templates/transactions/: confirm_delete.html  form.html  list.html
tests/: test_cashflow_create.py  test_cashflow_delete.py  test_cashflow_dynamic_dependencies.py  test_cashflow_list_filtering.py  test_cashflow_update.py  test_cashflow_validation.py  test_smoke.py
