[project]
name = "service-template"
version = "0.1.0"
description = "Base template for Python services"
authors = [
    { name = "Hage", email = "Hagegyakutai@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.0",
    "hatchling",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "requests",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
)/
'''

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
