[project]
name = "dds-service"
version = "0.1.0"
description = """ДДС (движение денежных средств) — это процесс учета, управления и анализа
поступлений и списаний денежных средств компании или частного лица."""
authors = [
    { name = "Hage", email = "Hagegyakutai@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "black>=24.10.0",
    "django>=5.2,<5.3",
    "django-filter>=25.1,<26",
    "djangorestframework>=3.16,<3.17",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0,<25.0",
    "flake8>=7.1.0,<8",
    "mypy>=1.11.2,<2",
    "pre-commit>=4,<5",
    "pytest>=8.3.0, <9",
    'pytest-django>=4.11,<5',
    "pytest-cov>=6,<7",
    "django-stubs>=5.1,<6"

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["apps", "config"]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
